fixing alignments

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -57,19 +57,11 @@ header a {
    color: var(--tertiary-color);
 }
 
-.nav-title {
-   color: var(--primary-color);
-   border-bottom: 3px solid;
-   text-align: center;
-   width: 50%;
-   border-color: var(--primary-color);
-}
-
 header nav ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
-   align-items: center;
+   align-items: flex-end;
    list-style: none;
 }
 
@@ -79,6 +71,18 @@ header nav ul li a {
    font-size: 1.55vw;
    color: var(--primary-color);
    justify-content: space-between;
+}
+
+.nav-title {
+   color: var(--primary-color);
+   border-bottom: 3px solid;
+   text-align: center;
+   width: 50%;
+   border-color: var(--primary-color);
+}
+
+.header-nav-center {
+   padding: 10px;
 }
 
 .empty-space {
@@ -190,7 +194,7 @@ header nav ul li a {
    display: flex;
    align-items: left;
    padding: 10px;
-   border-left: 3px solid var(--tertiary-color);
+   border-left: 3px solid var(--secondary-color);
    align-self: start;
    height: 100%;
 }
@@ -199,29 +203,28 @@ header nav ul li a {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
-   grid-template-rows: 1fr;
+   grid-template-rows: repeat(3, 1fr);
    color: var(--secondary-color);
    font-size: 1.2rem;
    column-gap: 10px;
+   row-gap: 10px;
+   grid-auto-flow: dense;
 }
 
 .work-grid-item {
    padding: 15px 0;
    border: 2px solid var(--primary-color);
-   display: flex;
-   height: 300px;
+   height: 150px;
 }
 .work-run-buddy-container {
+   grid-column: 1 / span 2;
+   grid-row: 1 / span 2;
    background-image: url("../images/work_run_buddy.jpg");
    background-size: cover;
    display: grid;
-   grid-template-columns: repeat (3, 1fr);
-   grid-template-rows: repeat (3, 1fr);
-   flex-direction: row;
-}
-
-.work-run-buddy-container:hover {
-   opacity: 0.5;
+   grid-template-columns: repeat(3, 1fr);
+   grid-template-rows: repeat(3, 1fr);
+   text-decoration: none;
 }
 
 .work-run-buddy-item {
@@ -230,6 +233,13 @@ header nav ul li a {
    grid-row: 3 / span 1;
    height: fit-content;
    width: fit-content;
+   text-decoration: none;
+   color: var(--tertiary-color);
+   align-self: flex-end;
+}
+
+.work-run-buddy-container:hover {
+   opacity: 0.5;
 }
 
 .work-run-buddy-item h4 {
@@ -250,8 +260,6 @@ header nav ul li a {
    width: 95%;
    display: flex;
    flex-direction: row;
-   align-self: flex-start;
-   height: 150%;
    align-items: center;
 }
 
@@ -263,18 +271,23 @@ header nav ul li a {
    padding: 10px;
 }
 
-.contact-me div nav {
-   align-items: center;
-   padding: 10px;
-   border-left: 3px solid var(--secondary-color);
+.contact-me-nav-center {
    width: 100%;
-   height: 150%;
+   justify-content: space-around;
+   text-align: center;
+   align-self: center;
+   align-items: center;
+}
+
+.contact-me div nav {
+   padding: 30px 30px 30px 0;
+   border-left: 3px solid var(--secondary-color);
+
 }
 
 .contact-me-title {
    color: var(--tertiary-color);
    border-bottom: 3px solid;
-   text-align: center;
    border-color: var(--tertiary-color);
    text-decoration: none;
 }
@@ -282,9 +295,7 @@ header nav ul li a {
 .contact-me nav ul {
    display: flex;
    flex-wrap: wrap;
-   align-items: center;
    list-style: none;
-   justify-content: space-between;
 }
 
 .contact-me nav ul li a {
@@ -295,6 +306,139 @@ header nav ul li a {
 .contact-empty-space {
    padding: 1px 15px;
 }
-
 /* END of CONTACT ME styles */
+/**~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~**/
+
+
+/****************************************************/
+/* START of MEDIA QUERIES styles */
+
+/* Media Query for small desktop and screens and smaller */
+@media screen and (max-width: 980px) {
+   header {
+      padding-bottom: 10px;
+      justify-content: center;
+      position: relative;
+   }
+
+   header h1 {
+      width: 100%;
+      text-align: center;
+   }
+
+   header nav ul {
+      margin-top: 20px;
+      width: 100%;
+      justify-content: center;
+   }
+
+   header nav ul li a {
+      font-size: 20px;
+   }
+
+   .contact-me {
+      text-align: center;
+   }
+
+   .contact-me nav ul {
+      margin-top: 20px;
+      width: 100%;
+      justify-content: center;
+      padding-top: 5px;
+      }
+
+   .contact-me nav ul li a {
+      font-size: 20px;
+   }
+
+/* Media Query for tablets and smaller */
+@media screen and (max-width: 768px) {
+   header {
+      padding-bottom: 10px;
+      justify-content: center;
+      position: relative;
+   }
+
+   header h1 {
+      width: 100%;
+      text-align: center;
+   }
+
+   header nav ul {
+      margin-top: 20px;
+      width: 100%;
+      justify-content: center;
+   }
+
+   header nav ul li a {
+      font-size: 20px;
+   }
+
+   .work-grid-wrapper {
+      width: 100%;
+      display: flex;
+      align-items: left;
+      padding: 10px;
+      border-left: 3px solid var(--secondary-color);
+      align-self: start;
+      height: 100%;
+   }
+   
+   .work-grid-container {
+      width: 100%;
+      display: grid;
+      grid-template-rows: repeat(3, 1fr);
+      color: var(--secondary-color);
+      font-size: 1.2rem;
+      column-gap: 10px;
+   }
+   
+   .work-grid-item {
+      padding: 15px 0;
+      border: 2px solid var(--primary-color);
+      display: flex;
+   }
+
+   .work-run-buddy-container {
+      background-image: url("../images/work_run_buddy.jpg");
+      background-size: cover;
+      display: grid;
+      grid-template-rows: repeat (3, 1fr);
+      flex-direction: column;
+   }
+   
+   .work-run-buddy-item {
+      background-color: var(--primary-color);
+      grid-row: 3 / span 1;
+      height: fit-content;
+      width: fit-content;
+   }
+   
+   .work-run-buddy-item h4 {
+      font-size: 18px;
+      padding: 5px;
+   }
+
+   .work-run-buddy-item h5 {
+      font-size: 12px;
+      padding: 0 5px 5px 5px;
+   }
+   
+   .contact-me {
+      text-align: center;
+   }
+
+   .contact-me nav ul {
+      margin-top: 20px;
+      width: 100%;
+      justify-content: center;
+      padding-top: 5px;
+      }
+
+   .contact-me nav ul li a {
+      font-size: 20px;
+   }
+
+}
+/* END of MEDIA QUERIES styles */
 /**~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~**/
